# BiobaseFasta

./: .buildbot-devel  .travis.yml  BiobaseFASTA.cabal  BiobaseFasta.cabal  FastaTool.hs  README.md  cabal.project  changelog  changelog.md  default.nix  shell.nix  stack.yaml
Biobase/: Fasta.hs
Biobase/Fasta/: Conduit.hs  Export.hs  Import.hs  QuickCheck.hs  Streaming.hs  Strict.hs  Types.hs
Tests/: Test.hs
_old/: Pipes.hs
_old/Biobase/Fasta/: Conduit.hs  Import.hs  QuickCheck.hs
overrides/: semirings.nix
src/: FastaFileStatistics.hs  FastaTool.hs  fastaextract.hs
tests/: ppoly.fa  ppoly.fa-golden  properties.hs  sample1.fa-golden  sample2.fa-golden  sample3.fa-golden  twice.fa  twice.fa-golden
