name:           BiobaseFASTA
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen
maintainer:     choener@tbi.univie.ac.at
homepage:       http://www.tbi.univie.ac.at/~choener/
copyright:      Christian Hoener zu Siederdissen, 2011
category:       Bioinformatics
synopsis:       Iteratee-based FASTA parser
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.4.0
description:
                Enumeratees for FASTA-handling and convenience functions. In a
                typical application, the user should write an enumeratee to
                extract information to allow for efficient low-memory handling
                of queries.

extra-source-files:

library
  build-depends:
    base >3 && <5,
    iteratee,
    iteratee-compress,
    transformers

  exposed-modules:
    Biobase.FASTA
    Biobase.FASTA.Import

  ghc-options:
    -O2 -funbox-strict-fields

-- repository not yet public

-- source-repository head
--   type: git
--   location: git://github.com/choener/BiobaseFASTA
