name:           BiobaseFasta
version:        0.1.0.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       https://github.com/choener/BiobaseFasta
bug-reports:    https://github.com/choener/BiobaseFasta/issues
copyright:      Christian Hoener zu Siederdissen, 2011-2015
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
synopsis:       conduit-based FASTA parser
description:
                Conduit-based handling of FASTA files. This library provides a
                streaming interface. The user selects a window size, then
                handles the window. For each window, the previous (past) window
                is available, in case some data sits on the boundary between
                windows.
                .
                FastaTool is a simple tool providing information on FASTA
                files, and allowing to extract sequences and subsequences.
                .
                The library is, in general, in a "preview" state. In cases
                where you need to scan large FASTA files fast and with low
                memory overhead, the 'streamFasta' function, however, should
                already be useable enough.



extra-source-files:
  changelog.md
  README.md



library
  build-depends: base                 >= 4.7    && < 4.9
               , bytestring
               , conduit              >= 1.2    && < 1.3
               , conduit-combinators  >= 1.0    && < 1.1
               , BiobaseTypes         >= 0.1.0  && < 0.1.1
  exposed-modules:
    Biobase.Fasta
    Biobase.Fasta.Import
    Biobase.Fasta.Types
  default-language:
    Haskell2010
  default-extensions: BangPatterns
  ghc-options:
    -O2



--executable FastaTool
--  main-is:
--    FastaTool.hs
--  build-depends:
--    cmdargs == 0.10.*
--  ghc-options:
--    -O2



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: TemplateHaskell
  build-depends: base
               , BiobaseFasta
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/BiobaseFasta

