name:           BiobaseFasta
version:        0.1.0.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       https://github.com/choener/BiobaseFasta
bug-reports:    https://github.com/choener/BiobaseFasta/issues
copyright:      Christian Hoener zu Siederdissen, 2011-2015
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
synopsis:       conduit-based FASTA parser
description:
                Conduit-based handling of FASTA files. This library provides a
                streaming interface. The user selects a window size, then
                handles the window. For each window, the previous (past) window
                is available, in case some data sits on the boundary between
                windows.
                .
                FastaTool is a simple tool providing information on FASTA
                files, and allowing to extract sequences and subsequences.



extra-source-files:
  changelog.md
  README.md
  tests/sample1.fa
  tests/sample2.fa
  tests/sample3.fa



flag llvm
  description: use llvm backend
  default: False
  manual:  True



library
  build-depends: base                 >= 4.7    && < 4.9
               , aeson                >= 0.8    && < 0.9
               , binary               >= 0.7    && < 0.8
               , BiobaseTypes         >= 0.1.1  && < 0.1.2
               , bytestring
               , cereal               >= 0.4    && < 0.5
               , cereal-text          >= 0.1    && < 0.2
               , conduit              >= 1.2    && < 1.3
               , conduit-combinators  >= 1.0    && < 1.1
               , conduit-extra        >= 1.1    && < 1.2
               , containers
               , deepseq              >= 1.3    && < 1.5
               , text-binary          >= 0.1    && < 0.2
               , vector               >= 0.10   && < 0.11
  exposed-modules:
    Biobase.Fasta
    Biobase.Fasta.Conduit
    Biobase.Fasta.Types
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , RankNTypes
                    , RecordWildCards
  ghc-options:
    -O2



executable FastaFileStatistics
  build-depends: base
               , BiobaseFasta
               , bytestring
               , cmdargs              == 0.10.*
               , conduit-combinators
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveDataTypeable
                    , RecordWildCards
                    , ScopedTypeVariables
  hs-source-dirs:
    src
  main-is:
    FastaFileStatistics.hs
  ghc-options:
    -O2 -funbox-strict-fields
  if flag(llvm)
    ghc-options:
      -fllvm -optlo-O3 -optlo-std-compile-opts



executable FastaTool
  build-depends: base
               , BiobaseFasta
               , bytestring
               , cmdargs              == 0.10.*
               , conduit-combinators
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveDataTypeable
                    , RecordWildCards
                    , ScopedTypeVariables
  hs-source-dirs:
    src
  main-is:
    FastaTool.hs
  ghc-options:
    -O2 -funbox-strict-fields
  if flag(llvm)
    ghc-options:
      -fllvm -optlo-O3 -optlo-std-compile-opts



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: TemplateHaskell
  build-depends: base
               , BiobaseFasta
               , HUnit                        >= 1.2  && < 1.3
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-hunit         >= 0.3  && < 0.4
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/BiobaseFasta

