name:           BiobaseFasta
version:        0.1.0.0
author:         Christian Hoener zu Siederdissen, Florian Eggenhofer
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       http://www.tbi.univie.ac.at/~choener/
copyright:      Christian Hoener zu Siederdissen, 2011-2018
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
synopsis:       conduit-based FASTA parser
description:
                Conduit-based handling of FASTA files. This library provides a
                streaming interface. The user selects a window size, then
                handles the window. For each window, the previous (past) window
                is available, in case some data sits on the boundary between
                windows.
                .
                FastaTool is a simple tool providing information on FASTA
                files, and allowing to extract sequences and subsequences.
                .
                The library is, in general, in a "preview" state. In cases
                where you need to scan large FASTA files fast and with low
                memory overhead, the 'streamFasta' function, however, should
                already be useable enough.

extra-source-files:
  changelog.md
  README.md

library
  build-depends:
    base                >=4.5 && < 5.0
    ,bytestring                      
    ,conduit            >= 0.5.6
    ,conduit-extra
    ,containers         
    ,transformers
    
  default-language:
    Haskell2010
    
  exposed-modules:
    Biobase.Fasta
    Biobase.Fasta.Import
    Biobase.Fasta.Export
    Biobase.Fasta.Types

  ghc-options:
    -O2

--executable FastaTool
--  main-is:
--    FastaTool.hs
--  build-depends:
--    base                >=4.5 && < 5.0
--    ,bytestring                      
--    ,conduit            >= 0.5.6
--    ,conduit-extra
--    ,containers         
--    ,transformers
--    ,cmdargs
    
--  other-modules:
--    Biobase.Fasta.Types
--    Biobase.Fasta.Import
--  ghc-options:
--    -O2
--  default-language:
--    Haskell2010


source-repository head
  type: git
  location: git://github.com/choener/BiobaseFasta

source-repository this
  type:     git
  location: https://github.com/choener/BiobaseFasta/tree/0.1.0.0
  tag:      0.1.0.0